[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-notes"
version = "0.1.0"
description = "Export Apple Notes to Markdown files"
requires-python = ">=3.8"
dependencies = ["markdownify>=0.11"]

[tool.setuptools]
py-modules = ["export_notes"]

[project.scripts]
apple-notes = "export_notes:main"
